--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     margin: 0;
 }
 
@@ -51,8 +51,10 @@ body {
 }
 
 .button {
+   font-weight: 100;;
+
   text-align:center;
-  #font-size:30px;
+  font-size:2.9vw;
   padding:10px;
   text-decoration: none;
   transition: all 0.5s;
@@ -63,7 +65,7 @@ body {
   transition: all 0.5s;
   color: #ffffff;
   #background-color: #00000098;
-  text-shadow: #000000 5px 5px 10px;
+  text-shadow: #000000 0.6vw 0.6vw 1vw;
 }
 
 .logo {
