--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
+    letter-spacing: -0.075rem;
     margin: 0;
 }
 
